--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "ramda": "0.21.x",
-    "sanctuary-def": "0.6.x"
+    "sanctuary-def": "0.6.x",
+    "sanctuary-type-classes": "sanctuary-js/sanctuary-type-classes#dc-everything"
   },
   "devDependencies": {
     "doctest": "0.10.x",
